--- a/docker-compose-uat.yml
+++ b/docker-compose-uat.yml
@@ -15,6 +15,7 @@ services:
       - NODE_ENV=production
     volumes:
       - /home/kuzzle/app/njuelle/kuzzle-kibana/protocol-mqtt:/var/app/protocols/enabled/protocol-mqtt
+      - ./.kuzzlerc:/etc/.kuzzlerc
     labels:
       consul.service: kuzzle
       consul.tags: kuzzle-kibana
