change kuzzle port

--- a/docker-compose-uat.yml
+++ b/docker-compose-uat.yml
@@ -16,6 +16,8 @@ services:
     volumes:
       - /home/kuzzle/app/njuelle/kuzzle-kibana/protocol-mqtt:/var/app/protocols/enabled/protocol-mqtt
       - ./.kuzzlerc:/etc/.kuzzlerc
+    ports:
+      - "9000:9000"
     labels:
       consul.service: kuzzle
       consul.tags: kuzzle-kibana
