--- a/docker-compose-uat.yml
+++ b/docker-compose-uat.yml
@@ -14,8 +14,9 @@ services:
       - kuzzle_services__memoryStorage__node__host=redis
       - NODE_ENV=production
     volumes:
-      - /home/kuzzle/app/njuelle/kuzzle-kibana/protocol-mqtt:/var/app/protocols/enabled/protocol-mqtt
-      - ./.kuzzlerc:/etc/.kuzzlerc
+      - "./protocol-mqtt:/var/app/protocols/enabled/protocol-mqtt"
+      - "./../kuzzle-enterprise-probe-listener/:/var/app/plugins/enabled/kuzzle-enterprise-probe-listener/"
+      - "./conf/.kuzzlerc:/etc/.kuzzlerc"
     ports:
       - "9000:1883"
     labels:
@@ -38,12 +39,52 @@ services:
     labels:
       consul.skip: "true"
 
+  kdc-kuzzle:
+    image: kuzzleio/kuzzle
+    ports:
+    #   - "7515:7512"
+      - "9229:9229"
+    cap_add:
+      - SYS_PTRACE
+    depends_on:
+      - kdc-redis
+      - kdc-elasticsearch
+    volumes:
+      - "./:/var/app/plugins/enabled/kuzzle-enterprise-probe/"
+      - "./../kdc-bigquery-connector/:/var/app/plugins/enabled/kdc-bigquery-connector/"
+      - "./conf/.kdcrc:/etc/.kuzzlerc"
+    environment:
+      - kuzzle_services__db__client__host=http://kdc-elasticsearch:9200
+      - kuzzle_services__internalCache__node__host=kdc-redis
+      - kuzzle_services__memoryStorage__node__host=kdc-redis
+      - NODE_ENV=production
+    labels:
+      consul.service: kuzzle
+      consol.ports: '7515'
+
+  kdc-redis:
+    image: redis:3.2
+    labels:
+      consul.skip: "true"
+
+  kdc-elasticsearch:
+    image: kuzzleio/elasticsearch:5.4.1
+    environment:
+      - cluster.name=kuzzle
+      # disable xpack
+      - xpack.security.enabled=false
+      - xpack.monitoring.enabled=false
+      - xpack.graph.enabled=false
+      - xpack.watcher.enabled=false
+    labels:
+      consul.skip: "true"
+
   kibana:
     image: docker.elastic.co/kibana/kibana:5.4.1
     environment:
       - SERVER_HOST=0.0.0.0
     volumes:
-      - ./kibana.yml:/usr/share/kibana/config/kibana.yml
+      - "./kibana.yml:/usr/share/kibana/config/kibana.yml"
     labels:
       consul.service: web
       consul.tags: kibana-kuzzle
